[package]
name = "dong"
version = "0.1.0"
authors = ["Mikal Svendsen <mikal@protonmail.com>"]
edition = "2018"

[dev-dependencies]
deepsize = "0.2.0"

[dependencies]
lazy_static = "1.4.0"
static_assertions = "1.1.0"
serde = "1.0.125"
mio = "0.7.11"
chrono = "0.4.19"
bytes = "1.0.1"
regex = "1.4.3"
webrender = "0.61.0"
clipboard = "0.5.0"
encoding = "0.2.33"
bstr = "0.2.15"
byteorder = "1.4.3"
fxhash = "0.2.1"
uuid = "0.8.2"
log = "0.4.14"
rayon = "1.5.0"
threadpool = "1.8.1"
tempdir = "0.3.7"
toml = "0.5.8"
walkdir = "2.3.2"
itertools = "0.10.0"
flate2 = "1.0.20"
error-chain = "0.12.4"
clap = "2.33.3"
bitflags = "1.2.1"
oem_cp = "1.1.0"
encoding_rs = "0.8.28"
fnv = "1.0.7"
printpdf = "0.3.4"
ttf-parser = "0.12.0"
infer = "0.4.0"
ndarray = "0.15.1"
memmap = "0.7.0"
unicode-xid = "0.2.1"
num_cpus = "1.13.0"
nom = "6.1.2"
url = "2.2.1"
regex-automata = "0.1.9"
#crossbeam = "0.7.3"
#glyph_brush = "0.7.2"
#rusttype = "0.9.2"
#gfx = "0.18.2"